# docker-heroku-haskell-cabal

./: Procfile  cabal-bootstrap  docker-heroku-haskell-cabal.cabal
src/: App.hs
