name:                docker-heroku-haskell-cabal
version:             0.1.0.0
synopsis:            Barebones Haskell with Cabal Docker image
-- description:
license:             MIT
license-file:        LICENSE
author:              Chance Snow
maintainer:          git@chancesnow.me
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
-- Add other internal modules here
--  other-modules:       Models.User
-- Add third party dependencies
  build-depends:       base >=4.8 && <4.9,
                       http-types,
                       wai,
                       warp
  ghc-options:         -Wall
  default-language:    Haskell2010

executable docker-heroku-haskell-cabal
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9,
                       docker-heroku-haskell-cabal
  default-language:    Haskell2010
